# docfd

./: .gitattributes  .gitignore  CHANGELOG.md  Containerfile  Dockerfile  LICENSE  Makefile  README.md  TUI_DESIGN.md  demo-vhs.sh  docfd.opam  docfd.opam.locked  docfd.opam.template  dune-project  notefd.opam  publish.sh  run-container.sh  run.sh  start-container-selinux.sh  start-container.sh  update-version-string.py  update-version-string.sh
.github/workflows/: deploy-linux.yml  deploy.yml
bin-tests/: dune  main.ml  utils_tests.ml
commands-from-tests.t/: run.t
containers/: Containerfile.demo-vhs
containers/demo-vhs/: Containerfile
containers/docfd/: Containerfile
cram-tests/file-collection-tests.t/: run.t
cram-tests/line-wrapping-tests.t/: sentences.txt  words.txt
cram-tests/match-type-tests.t/: test.txt
cram-tests/open-with-tests.t/: run.t
cram-tests/printing-tests.t/: test2.txt
cram-tests/script-tests.t/: run.t
cram-tests/search-scope-narrowing-tests.t/: run.t
demo-vhs-tapes/: multi-file-view-screenshot.tape  pdf.tape  repo-non-interactive.tape  repo.tape  single-file-view-screenshot.tape  ui-screenshot.tape
file-collecting-tests.t/: run.t
file-collection-tests.t/: run.t
interactive-tutorial/: .gitignore  main.py  pyproject.toml
lib/: BK_tree.ml  BK_tree.mli  GZIP.ml  char_map.ml  content_req_exp.ml  doc_id_db.ml  doc_id_db.mli  docfd_lib.ml  dune  filter_exp.ml  index.ml  index.mli  int_set.ml  link.ml  misc_utils.ml  option_syntax.ml  params.ml  parser_components.ml  protobuf_utils.ml  search_exp.ml  search_exp.mli  search_phrase.ml  search_phrase.mli  search_phrase_exp.ml  search_result.ml  search_result.mli  search_result_heap.ml  sqlite3_manager.ml  sqlite3_manager.mli  sqlite3_pool.ml  sqlite3_pool.mli  sqlite3_utils.ml  stop_signal.ml  stop_signal.mli  string_set.ml  task_pool.ml  task_pool.mli  tokenize.ml  word_db.ml  word_db.mli
lib-tests/: dune  index_tests.ml  main.ml  search_exp_tests.ml
line-wrapping-tests.t/: long-words.txt  run.t
match-typ-tests.t/: test.txt
match-type-tests.t/: run.t
maybe-delete-later/: advanced_usage.md  docfd.ml  document.ml  tag_search_constraints.ml
misc-behavior-tests.t/: run.t
non-interactive-mode-return-code-tests.t/: run.t
non-interactive-return-code-tests.t/: run.t
open-with-tests.t/: run.t
path-collecting-tests.t/: paths  run.t
printing-tests.t/: run.t
profile/: dune  main.ml
profiling/: dune  main.ml
script-tests.t/: run.t
search-scope-narrowing-tests.t/: dune  run.t
src/: content_and_search_result_render.ml  content_index.ml  content_index.mli  content_search_constraints.ml  content_search_result.ml  docfd.ml  document.ml  document_store.ml  document_store.mli  dune  index.ml  index.mli  int_map.ml  misc_utils.ml  multi_file_view.ml  notefd.ml  params.ml  parser_components.ml  proc_utils.ml  render.ml  result_let.ml  search_constraints.ml  search_constraints.mli  search_result.ml  single_file_view.ml  string_map.ml  string_option_map.ml  string_set.ml  task_pool.mli  tokenize.ml  ui.ml  ui_base.ml  ui_components.ml  version_string.ml  word_db.ml  word_db.mli  worker_pool.ml
tests/: dune  index_tests.ml  main.ml  search_exp_tests.ml  test_utils.ml  utils_tests.ml
