(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30-70@8"))
 (name docfd_lib)
 (preprocess (pps
               ppx_deriving.show
               ppx_deriving.ord
               ppx_deriving.eq
               ))
 (libraries containers
            containers-data
            angstrom
            fmt
            spelll
            oseq
            eio
            decompress.gz
            bigstringaf
            unix
            diet
            sqlite3
            uuseg
            uucp
            kcas_data
            timedesc
 )
)
