(rule
  (targets string_set.ml)
  (deps ../lib/string_set.ml)
  (action (copy# %{deps} %{targets}))
  )

(rule
  (targets misc_utils.ml)
  (deps ../lib/misc_utils.ml)
  (action (copy# %{deps} %{targets}))
  )

(executable
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30-70@8"))
 (name main)
 (libraries docfd_lib
            containers
            cmdliner
            fmt
            notty
            notty.unix
            nottui
            lwd
            oseq
            eio
            eio_posix
            digestif.ocaml
            digestif
 )
)
