(executable
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30-70@8"))
 (name docfd)
 (public_name docfd)
 (libraries containers
            angstrom
            cmdliner
            fmt
            spelll
            notty
            notty.unix
            nottui
            oseq
            eio
            eio_main
            domainslib
            kcas_data
 )
)
